@@ -441,6 +441,7 @@ public:
 
 #if wxUSE_BUSYINFO
     void ShowBusyInfo(wxCommandEvent& event);
+    void ShowRichBusyInfo(wxCommandEvent& event);
 #endif // wxUSE_BUSYINFO
 
 #if wxUSE_FINDREPLDLG
@@ -577,6 +578,7 @@ enum
     DIALOGS_ABOUTDLG_FULL,
     DIALOGS_ABOUTDLG_CUSTOM,
     DIALOGS_BUSYINFO,
+    DIALOGS_BUSYINFO_RICH,
     DIALOGS_FIND,
     DIALOGS_REPLACE,
     DIALOGS_REQUEST,
